--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel='stylesheet' type='text/css' href='./assets/css/style.css'>
+    <script type='text/javascript' src='./assets/javascript/app.js' defer></script>
 </head>
 <body>
     
