--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
         <div id='container-game'>
             <div class='game-area' id="timer-div">
-                <h1 class='text'>Time Remaining: <span id="timer"></span></h1>
+                <h5 class='text'>Time Remaining: <span id="timer"></span></h5>
             </div>
             <div class="game-area" id="question-div">
                 <h1 class='text' id='text-question'>There is a question here.</h1>
             </div>
             <div class="game-area" id="answers-div">
-                <h2 class='text' id="text-answer-1">There is a possible answers here.</h2>
-                <h2 class='text' id="text-answer-2">There is a possible answers here.</h2>
-                <h2 class='text' id="text-answer-3">There is a possible answers here.</h2>
-                <h2 class='text' id="text-answer-4">There is a possible answers here.</h2>
+                <h5 class='text' id="text-answer-1"></h5>
+                <h5 class='text' id="text-answer-2"></h5>
+                <h5 class='text' id="text-answer-3"></h5>
+                <h5 class='text' id="text-answer-4"></h5>
             </div>
             
         </div>
