--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Trivia Night</title>
     <link rel='stylesheet' type='text/css' href='./assets/css/reset.css'>
     <link rel='stylesheet' type='text/css' href='./assets/css/style.css'>
-    <script type='text/javascript' src='./assets/javascript/app.js' defer></script>
+    
     
 </head>
 <body>
@@ -35,5 +35,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type='text/javascript' src='./assets/javascript/app.js'></script>
 </body>
 </html>
