questions and answers work, progresses through them all, and messages if you are correct or incorrect.

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
         <div id='container-game'>
             <div class='game-area' id="timer-div">
-                <h5 class='text'>Time Remaining: <span id="timer"></span></h5>
+                <h5 class='text'> <span id="timer"></span></h5>
             </div>
             <div class="game-area" id="question-div">
-                <h1 class='text' id='text-question'>There is a question here.</h1>
+                <h1 class='text' id='text-question'></h1>
             </div>
             <div class="game-area" id="answers-div">
-                <h5 class='text' id="text-answer-1"></h5>
-                <h5 class='text' id="text-answer-2"></h5>
-                <h5 class='text' id="text-answer-3"></h5>
-                <h5 class='text' id="text-answer-4"></h5>
+                <div class='text answer' id="text-answer-0"></div>
+                <div class='text answer' id="text-answer-1"></div>
+                <div class='text answer' id="text-answer-2"></div>
+                <div class='text answer' id="text-answer-3"></div>
             </div>
             
         </div>
