--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
             <div class="game-area" id="answers-div">
                 <div class='text answer' id="text-answer-0"></div>
-                <div class='text answer' id="text-answer-1"></div>
-                <div class='text answer' id="text-answer-2"></div>
-                <div class='text answer' id="text-answer-3"></div>
+                <div class='text answer disappear' id="text-answer-1"></div>
+                <div class='text answer disappear' id="text-answer-2"></div>
+                <div class='text answer disappear' id="text-answer-3"></div>
             </div>
             
         </div>
