--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class='text answer disappear' id="text-answer-1"></div>
                 <div class='text answer disappear' id="text-answer-2"></div>
                 <div class='text answer disappear' id="text-answer-3"></div>
+                <div class="spacer"></div>
             </div>
             
         </div>
