chose font, polished styling, fixed bugs with counters, made divs show and hide as necessary.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Night</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' href='./assets/css/reset.css'>
     <link rel='stylesheet' type='text/css' href='./assets/css/style.css'>
     
@@ -18,7 +19,7 @@
 
         <div id='container-game'>
             <div class='game-area' id="timer-div">
-                <h5 class='text'> <span id="timer"></span></h5>
+                <h5 class='text '> <span id="timer"></span></h5>
             </div>
             <div class="game-area" id="question-div">
                 <h1 class='text' id='text-question'></h1>
